add all changes

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,19 +1,22 @@
 <section class="banner">
     <div class="banner-box">
         <div class="intro-text">
-            
+        
         </div>
-        <header class="page-header header">
+        <video src="/assets/videos/video-2.mp4" autoPlay loop muted>
+            </video>
+        
             <div class="description">
-                <h1>Welcome to A.A.K.B.N ,Telangapada</h1>
-                <h4>"WE SEEK TO MAXIMIZE THE POTENTIAL OF YOUR CHILD IN THE SAFE ENVIRONMENT OF OUR SCHOOL."</h4>
+             
+                <h4>Welcome to A.A.K.B.N ,Telangapada</h4>
+                <p>"WE SEEK TO MAXIMIZE THE POTENTIAL OF YOUR CHILD IN THE SAFE ENVIRONMENT OF OUR SCHOOL."</p>
 
 
                 </div>
             
            
 
-            </header>
+            
             
 
          
