--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,7 +28,7 @@
             @ 2021 copyright; santanu kumar paikaray
             </div>
             <div class="container">
-                <a href="https://twitter.com/alturas" class="btn btn-social-icon fa fa-twitter" target="_blank">
+                <a href="https://twitter.com/PaikaraySantanu" class="btn btn-social-icon fa fa-twitter" target="_blank">
                      <!-- <span class="fa-stack fa-lg">
                         <i class="fa fa-square- fa-stack-2x"></i>
                         <i class="fa fa-twitter fa-stack-1x"></i>
@@ -36,14 +36,14 @@
                         </a>&nbsp;
                
                 
-                    <a href="https://twitter.com/alturas" class="btn btn-social-icon fa fa-facebook" target="_blank">
+                    <a href="https://www.facebook.com/profile.php?id=100004852785196" class="btn btn-social-icon fa fa-facebook" target="_blank">
                          <!-- <span class="fa-stack fa-lg">
                             <i class="fa fa-square- fa-stack-2x"></i>
                             <i class="fa fa-twitter fa-stack-1x"></i>
                             </span>  -->
                             </a>&nbsp;
                             
-                    <a href="https://twitter.com/alturas" class="btn btn-social-icon fa fa-instagram" target="_blank">
+                    <a href="https://www.instagram.com/princeraja1856/" class="btn btn-social-icon fa fa-instagram" target="_blank">
                         <!-- <span class="fa-stack fa-lg">
                            <i class="fa fa-square- fa-stack-2x"></i>
                            <i class="fa fa-twitter fa-stack-1x"></i>
