--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -29,8 +29,9 @@ img{
 .navbar-toggler-icon{
     background-color:#000;
 }
-/* .header{
+ /* .header{
     background-image: url("assets/images/500_F_189991259_6ZrR7CTUtMbvng90m219BkQI1PumD719.jpg");
-    /* background-size: cover;
+     background-size: cover;
     background-position: center;
-    position: relative; */ 
+    position: relative; 
+ } */
