--- a/src/app/staticpages/contact-us/contact-us.component.html
+++ b/src/app/staticpages/contact-us/contact-us.component.html
@@ -21,7 +21,7 @@
         <hr>
         <h3 class="lead">At-Telangapada,Po-Gadakharad,Dist-Puri
             Block-Kanas,Pin no.-752019 , Ph no.-91+9937089610
-            E-Mail:santanupaikaray1962@gmail.com</h3>
+            E-Mail:zetafinser@gmail.com</h3>
             <hr class="my-4">
             <p>Google map:<a href="https://www.google.com/maps/place/ZETA+FINSERV(ATM)/">click here to visit...</a></p>
         </div>
