--- a/src/app/staticpages/page/page.component.html
+++ b/src/app/staticpages/page/page.component.html
@@ -69,5 +69,20 @@
                 adipisicing elit. Eius magnam distinctio
                  doloremque omnis laborum necessitatibus
                   maiores ut natus cumque blanditiis?</p>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                      Soluta beatae ut magnam dicta minus rerum omnis magni, 
+                      in error obcaecati a odit facere animi, quidem voluptatum
+                       ratione assumenda eum quae. Nemo repudiandae,
+                       odio quia reprehenderit ad vitae amet temporibus magnam
+                        ratione earum ipsa voluptas ipsam non quis quo natus cum?</p>
+                        <hr>
+                        <p class="my-4">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                 Maxime deserunt iure error cum, dolores neque asperiores
+                                  ea culpa. Omnis voluptatum itaque cum laudantium vero 
+                                   quibusdam culpa, ducimus, quis est sunt veritatis esse optio
+                                    cupiditate non enim rem quia ad neque? Quo ex hic quae nesciunt,
+                                 placeat fugit dolores ipsa necessitatibus nobis mollitia ad quidem,
+                                  tempore iusto ducimus accusamus facilis.</p>
         </div>
     
