--- a/src/app/banner/banner.component.css
+++ b/src/app/banner/banner.component.css
@@ -1,17 +1,24 @@
-.header{
-    background-image: url("/assets/images/500_F_189991259_6ZrR7CTUtMbvng90m219BkQI1PumD719.jpg");
+/* .header{
+    background: src("/assets/videos/video-2.mp4");
     background-size: cover;
     background-position: center;
     position: relative;
-}
+} */
 .description{
     left:50%;
     position: absolute;
-    top:45%;
+    top:50%;
     transform: translate(-50%,-75%);
     text-align: center;
     color:hotpink;
 }
-h4{
+p{
     color:wheat;
+}
+video{
+    object-fit: cover;
+    width:100%;
+    height: 90%;
+    position: relative;
+    /* z-index: -1; */
 }
